deleted lock files

--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "dotenv": "^8.2.0",
     "ioredis": "^4.14.0",
     "moleculer": "^0.13.9",
-    "moleculer-web": "^0.8.5"
+    "moleculer-db": "^0.8.2",
+    "moleculer-db-adapter-mongo": "^0.4.5",
+    "moleculer-db-adapter-mongoose": "^0.8.2",
+    "moleculer-web": "^0.8.5",
+    "mongoose": "^5.7.7"
   },
   "engines": {
     "node": ">= 8.x.x"
