--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "moleculer-db": "^0.8.2",
     "moleculer-db-adapter-mongo": "^0.4.5",
     "moleculer-db-adapter-mongoose": "^0.8.2",
+    "moleculer-mail": "^1.2.3",
     "moleculer-web": "^0.8.5",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "nodemailer": "^6.3.1",
+    "uuid": "^3.3.3"
   },
   "engines": {
     "node": ">= 8.x.x"
