--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "generate-password": "^1.4.2",
     "ioredis": "^4.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moleculer": "^0.13.9",
     "moleculer-db": "^0.8.2",
     "moleculer-db-adapter-mongo": "^0.4.5",
     "moleculer-db-adapter-mongoose": "^0.8.2",
     "moleculer-mail": "^1.2.3",
     "moleculer-web": "^0.8.5",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
     "uuid": "^3.3.3"
