--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moleculer-repl": "^0.5.7"
   },
   "dependencies": {
+    "analytics-node": "^3.4.0-beta.1",
     "dotenv": "^8.2.0",
     "generate-password": "^1.4.2",
     "ioredis": "^4.14.0",
